--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
     <body>
        <div class="header">
-            <a href="myPortfolio.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="About.html">About</a>
             <a href="Project.html">Projects</a>
             <a href="Contact.html">Contacts</a>
